--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://prasanth7029.github.io/synexiai-website",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,13 +13,16 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "framer-motion": "^12.23.5",
     "front-matter": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "react-tooltip": "^5.29.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
