--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "front-matter": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-globe.gl": "^2.34.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3",
+    "react-simple-maps": "^1.0.0",
     "react-simple-typewriter": "^5.0.1",
-    "react-tooltip": "^5.29.1"
+    "react-tooltip": "^5.29.1",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.178.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@eslint/js": "^9.30.1",
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.1.8",
@@ -37,6 +42,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "rollup": "^3.29.4",
     "tailwindcss": "^3.4.1",
     "vite": "^7.0.4"
   }
