--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout source code
         uses: actions/checkout@v3
 
       - name: Setup Node.js
@@ -25,7 +25,10 @@ jobs:
         run: npm install --legacy-peer-deps
 
       - name: Build Vite project
-        run: npm run build
+        run: |
+          echo "Setting NODE_ENV=production for correct base path"
+          export NODE_ENV=production
+          npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
