--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,22 +2,16 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 permissions:
   contents: read
-  pages: write
+  pages:    write
   id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout source
         uses: actions/checkout@v3
@@ -30,7 +24,10 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
+      # <<< HERE: inject the secret into Vite’s env >>>
       - name: Build Vite project
+        env:
+          VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
         run: npm run build
 
       - name: Upload artifact
