--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.10.0",
     "framer-motion": "^12.23.5",
     "front-matter": "^4.0.2",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-globe.gl": "^2.34.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3",
     "react-simple-maps": "^1.0.0",
