--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Build Vite project
         env:
           VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
+          VITE_NEWS_API_KEY: ${{ secrets.VITE_NEWS_API_KEY }}
         run: npm run build
 
       - name: Upload artifact
