--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^1.10.0",
-    "framer-motion": "^12.23.5",
+    "framer-motion": "^12.23.6",
     "front-matter": "^4.0.2",
+    "openai": "^5.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-globe.gl": "^2.34.0",
@@ -22,10 +23,11 @@
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3",
-    "react-simple-maps": "^1.0.0",
+    "react-simple-maps": "^3.0.0",
     "react-simple-typewriter": "^5.0.1",
     "react-tooltip": "^5.29.1",
     "react-tsparticles": "^2.12.2",
+    "rss-parser": "^3.13.0",
     "styled-components": "^6.1.19",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.178.0",
