--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "netlify-cli": "^22.2.2",
     "postcss": "^8.5.6",
     "rollup": "^3.29.4",
     "tailwindcss": "^3.4.1",
